<resources>
    <string name="app_name">Practice_80v2</string>
    <string name="add_student">Add student</string>
    <string name="show_all_data">Show all data</string>
    <string name="find_student">Find student</string>
    <string name="delete_student">Delete student</string>
    <string name="sort_students">Sort students</string>
    <string name="change_info">Change info</string>
    <string name="title_activity_add_student">AddStudentActivity</string>
    <string name="age">Age</string>
    <string name="second_name">Second name</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="choose_gender">Choose gender</string>
    <string name="submit">Submit</string>
    <string name="use_filter">Use filter</string>
    <string name="use_search">Use search</string>
    <string name="photo">Get photo</string>
    <string-array name="genderNames">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string-array name="fieldNames">
        <item>Name</item>
        <item>Last name</item>
        <item>Second name</item>
        <item>Gender</item>
        <item>Age</item>
    </string-array>
</resources>