<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/lastNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/secondNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_name"/>

    <EditText
        android:id="@+id/secondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/genderChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_gender"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/genderNames"/>

    <TextView
        android:id="@+id/ageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"/>

    <Button
        android:id="@+id/photoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_student" />

</LinearLayout>