<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowStudentActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/nameShowModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lastNameShowModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/secondNameShowModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/genderShowModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ageShowModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/changeInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_info"/>

    <Button
        android:id="@+id/deleteStudentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_student"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/nameEditModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"
        android:text="@string/last_name"/>

    <EditText
        android:id="@+id/lastNameEditModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/secondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"
        android:text="@string/second_name"/>

    <EditText
        android:id="@+id/secondNameEditModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/genderChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"
        android:text="@string/choose_gender"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:entries="@array/genderNames"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:visibility="gone"
        android:text="@string/age"/>

    <EditText
        android:id="@+id/ageEditModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        tools:ignore="MissingConstraints"
        android:visibility="gone"/>

    <Button
        android:id="@+id/getPhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        tools:visibility="gone" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/submit"/>

</LinearLayout>